--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <p><strong>Numéro :</strong> <span id="phone-number">06 574 93 58</span></p>
                     <p><strong>Nom :</strong> <span id="account-name">Balleya Joy Ephraim</span></p>
                     <hr>
-                    <p class="final-step">Une fois le transfert effectué, cliquez sur le bouton ci-dessous pour m'envoyer la preuve sur wattsapp et recevoir le livre.</p>
+                    <p class="final-step">Une fois le transfert effectué, cliquez sur le bouton ci-dessous pour m'envoyer la preuve sur WhatsApp et recevoir le livre.</p>
                     <button class="btn-whatsapp" onclick="sendWhatsAppConfirmation()">✅ J'ai payé, envoyer la preuve</button>
                 </div>
 
@@ -247,4 +247,5 @@
 </body>
 
 </html>
+
 
