--- a/index.html
+++ b/index.html
@@ -244,8 +244,22 @@
     </footer>
 
     <script src="script.js"></script>
+    <script>
+  // Désactive le clic droit
+  document.addEventListener('contextmenu', e => e.preventDefault());
+
+  // Désactive les touches de raccourci (F12, Ctrl+Shift+I, etc.)
+  document.onkeydown = function(e) {
+    if (e.keyCode == 123 || 
+        (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0) || e.keyCode == 'J'.charCodeAt(0) || e.keyCode == 'C'.charCodeAt(0))) || 
+        (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0))) {
+      return false;
+    }
+  };
+</script>
 </body>
 
 </html>
+
 
 
