--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <p>Plans alimentaires structurés</p>
                     </div>
                     <div class="slide">
-                        <img src="images/page3.jpg" alt="Extrait Page 3">
+                        <img src="images/page3.png" alt="Extrait Page 3">
                         <p>Conseils nutritionnels locaux</p>
                     </div>
                 </div>
@@ -260,6 +260,7 @@
 </body>
 
 </html>
+
 
 
 
